fix(component): Prevents field base from overflowing outside of container when rightGutter is in use
affects: ak-field-base

--- a/packages/ak-field-base/src/styles/Content.less
+++ b/packages/ak-field-base/src/styles/Content.less
@@ -40,7 +40,7 @@
 
 .content {
   .borders-and-padding(@base-border-width, @base-horizontal-padding, @base-height);
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   box-sizing: border-box;
 
   display: flex;
